syntax = "proto3";

package vessel.v1;

option go_package = "github.com/deadsnxcks/dbcp/protos/proto/vessel;vesselv1";

service VesselService {
    rpc List    (ListRequest)   returns (ListResponse);
    rpc Get     (GetRequest)    returns (GetResponse);
    rpc Update  (UpdateRequest) returns (UpdateResponse);
    rpc Create  (CreateRequest) returns (CreateResponse);
    rpc Delete  (DeleteRequest) returns (DeleteResponse);
}

message Vessel {
    int64 id = 1;
    string title = 2;
    string vessel_type = 3;
    double max_load = 4;
}

message ListRequest {}
message ListResponse {
    repeated Vessel vessels = 1;
}

message GetRequest {
    int64 id = 1;
}
message GetResponse {
    Vessel vessel = 1;
}

message CreateRequest {
    string title = 1;
    string vessel_type = 2;
    double max_load = 3;
}
message CreateResponse {
    int64 id = 1;
}

message UpdateRequest {
    int64 id = 1;
    optional string title = 2;
    optional string vessel_type = 3;
    optional double max_load = 4;
}
message UpdateResponse {}

message DeleteRequest {
    int64 id = 1;
}
message DeleteResponse {}